# agent-memory

./: README.md  pyproject.toml
docs/plans/: 2026-02-14-openclaw-port-design.md  2026-02-14-openclaw-port-plan.md
examples/: README.md
src/agent_memory/: CONFIG.yaml  __init__.py  config.py  facade.py  heartbeat.py  integration.py
src/agent_memory/context/: compaction.py  memory_flush.py  pruning.py  session.py  session_export.py  tool_pruning.py  window_guard.py
src/agent_memory/memory/: auto_capture.py  auto_recall.py  embeddings.py  embeddings_bedrock.py  embeddings_gguf.py  embeddings_openrouter.py  facts.py  manager.py  store.py  types.py
src/agent_memory/personality/: identity.py  presence.py  soul.py  workspace.py
tests/: test_agent_memory.py  test_bootstrap_truncation.py  test_config.py  test_embeddings_bedrock.py  test_embeddings_gguf.py  test_embeddings_openrouter.py  test_embeddings_protocol.py  test_facade_features.py  test_fallback_chain.py  test_heartbeat.py  test_resolve_embeddings.py  test_types_enums.py
